--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
-header{
+header {
     background-color: #2F2F2F;
     padding: 20px;
+    white-space: nowrap;
 }
 
-.textoNav{
+.textoNav {
     color: white;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
@@ -11,7 +12,7 @@ header{
     display: inline-block;
 }
 
-.textoNavDerecha{
+.textoNavDerecha {
     color: white;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
@@ -19,14 +20,14 @@ header{
     display: inline-block;
 }
 
-.logo{
+.logo {
     width: 20px;
     height: 25px;
     display: inline-block;
     margin-right: 50px;
 }
 
-.country{
+.country {
     width: 20px;
     height: 20px;
     display: inline-block;
@@ -38,21 +39,24 @@ body {
     background-color: white;
 }
 
-.enlaces{
+.enlaces {
     display: inline-block;
-    width: 80%;
+    width: 40%;
 }
 
-.enlaceDerecha{
+.enlaceDerecha {
     display: inline-block;
-    margin-right: 5px;
+    position: sticky;
+    right: 10px;
 }
-.logoSpace{
+
+.logoSpace {
     display: inline-block;
     width: 5%;
     margin-left: 25px;
 }
-footer{
+
+footer {
     background-color: #E7E7E7;
     padding-left: 40px;
     padding-right: 40px;
@@ -60,46 +64,121 @@ footer{
     padding-bottom: 10px;
 }
 
-.textoFooter{
+.textoFooter {
     color: #2F2F2F;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     padding-bottom: 5px;
 }
 
-.enlaceAzul{
+.enlaceAzul {
     color: #0A74F9;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.enlacesFooter{
+.enlacesFooter {
     margin-bottom: 20px;
 }
 
-.footerIzquierda{
+.footerIzquierda {
     display: inline-block;
     width: 90%;
 }
 
-.footerDerecha{
+.footerDerecha {
     width: 10%;
     float: right;
     margin-top: 50px;
 }
 
-aside{
+aside {
     display: inline-block;
     background-color: #F2F2F2;
-    width: 20%;
-    margin:0px;
-    min-height: 80vh;
+    width: 14%;
+    margin: 0px;
+    min-height: 100vh;
+    min-width: 200px;
+    position: relative;
 }
 
 section {
-    display: inline-block;
-    width: 78%;
+    display: flexbox;
     background-color: white;
-    margin: 0px;
-    min-height: 80vh;
+}
+
+.buscadorInput {
+    background-color: #D9D9D9;
+    border-radius: 7px;
+    border: none;
+    height: 27px;
+    width: 85%;
+    color: #2F2F2F;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    background-image: url(assets/search.png);
+    background-repeat: no-repeat;
+    background-position: 8px 8px;
+    padding-left: 31px;
+}
+
+.buscador {
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 80%;
+}
+
+.perfil {
+    position: absolute;
+    bottom: 0;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
+.profile {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+}
+
+.textoProfile {
+    color: #585858;
+    text-decoration: none;
+    font-size: large;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 5px;
+    display: inline-block;
+    vertical-align: middle;
+    padding-left: 5px;
+}
+
+.enlaceAzulAside {
+    color: #0A74F9;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    display: inline-block;
+    font-weight: 500;
+    margin-left: 5px;
+}
+
+.iconosAside{
+    width: 22px;
+    height: 20px;
+    display: inline-block;
+}
+.enlacesAside{
+    margin-top: 50px;
+    margin-left: 10px;
+    width: 80%;
+    display: inline-block;
+    vertical-align: middle;
+}
+.enlaceAside{
+    width: 80%;
+    margin: 10px;
+    display: inline-block;
+    vertical-align: middle;
 }
