--- a/styleLanding.css
+++ b/styleLanding.css
@@ -12,6 +12,7 @@
 .tarjeta {
     display: inline-block;
     width: 400px;
+    height: 180px;
     background-color: #f6f6f7;
     border-radius: 20px;
     margin-right: 20px;
@@ -23,6 +24,8 @@
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     font-size: small;
+    white-space: pre-line;
+    margin:0;
 }
 
 .textoGrisImportante{
@@ -30,6 +33,16 @@
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     font-size: small;
+    white-space: pre-line;
+    margin: 0;
+}
+
+.textoGrisImportanteApp{
+    color: #b4b4b4;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+    margin-top: 10px;
 }
 
 .textoNegroTitulo{
@@ -37,14 +50,95 @@
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     font-size: larger;
+    white-space: pre-line;
+    margin: 0;
 }
 
-.textoTarjeta{
+.textoTarjetaContainer{
     display: inline-block;
-    width: 220px;
+    width: 55%;
+    white-space: pre-line;
 }
 
 .imagenTarjeta{
+    width: 170px;
+    height: 170px;
+}
+
+.imagenTarjetaContainer{
     display: inline-block;
+    width: 40%;
+}
+
+.division{
+    width: 90%;
+    height: 1px;
+    background-color: #d5d5d5;
+    border: none;
+    margin-bottom: 50px;
+}
+
+.divisionApps{
     width: 95%;
+    height: 1px;
+    background-color: #d5d5d5;
+    border: none;
+    margin-bottom: 20px;
+}
+
+.containerApps{
+    width: 100%;
+    margin-left: 15px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.app{
+    height: 90px;
+    width: 47%;
+    min-width: 500px;
+    margin: 8px;
+    padding: 7px;
+}
+
+.iconoAppContainer{
+    display: inline-block;
+    height: 85%;
+    width: 10%;
+    padding: 5px;
+    margin-right: 10px;
+    min-width: 70px;
+}
+
+.infoAppContainer{
+    display: inline-block;
+    height: 85%;
+    width: 50%;
+    padding: 5px;
+    margin-right: 10px;
+    vertical-align: top;
+}
+
+.botonAppContainer{
+    display: inline-block;
+    background-color: #ededed;
+    height: 25%;
+    width: 100px;
+    text-align: center;
+    border-radius: 25px;
+    padding: 5px;
+    margin-top: 25px;
+    vertical-align: top;
+}
+
+.textoDescargar{
+    color: #0A74F9;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+}
+
+.iconoApp{
+    width: 100%;
+    height: 100%;
 }
