--- a/styles.css
+++ b/styles.css
@@ -98,9 +98,9 @@ aside {
     background-color: #F2F2F2;
     width: 15%;
     margin: 0px;
-    min-height: 100vh;
     min-width: 200px;
     position: relative;
+    height: 100%;
 }
 
 section {
@@ -135,8 +135,7 @@ section {
 }
 
 .perfil {
-    position: absolute;
-    bottom: 0;
+    margin-top: 700px;
     margin-left: 20px;
     margin-bottom: 20px;
 }
@@ -175,7 +174,7 @@ section {
 }
 .enlacesAside{
     margin-top: 50px;
-    margin-left: 10px;
+    margin-left: 30px;
     width: 80%;
     display: inline-block;
     vertical-align: middle;
@@ -192,6 +191,7 @@ section {
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     padding-bottom: 5px;
-    font-size: large;
+    font-size: 25px;
+    margin-left: 15px;
     font-weight: bolder;
 }
